--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,18 +2,20 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/fondo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:background="@drawable/fondo"
     tools:context=".loginprincipal">
 
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="170dp"
-        android:layout_height="60dp"
+        android:layout_width="342dp"
+        android:layout_height="56dp"
+        android:foregroundGravity="center"
         android:gravity="center"
-        android:text="LOGIN"
+        android:text="@string/login"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,7 +40,6 @@
             android:theme="?attr/actionBarTheme" />
 
 
-
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/materialToolbar6"
             android:layout_width="match_parent"
@@ -53,6 +54,15 @@
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme" />
 
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="USUARIO"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+
         <EditText
             android:id="@+id/usuario"
             android:layout_width="272dp"
@@ -61,10 +71,11 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:minHeight="48dp"
-            android:text="USUARIO"
+            android:text=""
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/materialToolbar7"
@@ -73,18 +84,29 @@
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme" />
 
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="CONTRASEÑA"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/contrasena"
             android:layout_width="272dp"
             android:layout_height="48dp"
             android:background="@drawable/stylo_bordes"
             android:ems="10"
-            android:textAlignment="center"
             android:inputType="textPersonName"
             android:minHeight="48dp"
-            android:text="CONTRASEÑA"
+            android:text=""
+            android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/materialToolbar8"
@@ -115,6 +137,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.685" />
+        app:layout_constraintVertical_bias="0.727" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
